# reonic-never-ghosted

./: .env.example  .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_STANDARDS.md  README.md  RESEARCH_PLAN.md  RESEARCH_SUMMARY.md  ab_compare.py  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vercel.json  vite.config.ts
agent/: Dockerfile  package-lock.json  package.json
backend/: .dockerignore  .env.template  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/agent/: __init__.py  agent.py  input_models.py  output_model.py
backend/app/data/: generator.py
backend/app/integration/: agent_engine.py  context.py  engine.py  real_engine.py  voltagent_engine.py
backend/app/knowledge/: __init__.py
backend/app/knowledge/data/: sample_reviews.json
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/repositories/: queries.py
backend/app/routers/: admin.py  appointments.py  deals.py  leads.py  master_data.py  notes.py  orgs.py  strategy.py
backend/scripts/: try_agent.py
backend/tests/: conftest.py  test_agent_engine.py  test_bp1.py  test_bp2.py  test_frontend_revamp.py  test_health.py  test_master_data.py  test_real_engine.py
docs/: about-reonic.md  initial_problem.md  metadata.md  preliminary-info.md
engine/: README.md  __init__.py  benchmarks.py  budget.py  demo.py  deterministic.py  engine_b.py  golden.py  knowledge.py  llm.py  log.py  models.py  (+1 more)
(+310 files in other folders)
